# ChatBuddy

./: CONTRIBUTING.md  README.md  background.js  content.css  content.js  manifest.json  mcp_toxicity_validator.py  popup.html  popup.js
dedalus-agent/: .env  agent.py  requirements.txt  websocket_server.py
mcp-server/: .env.example  .gitignore  README.md  main.py  mcp_config.yaml  package.json  pyproject.toml  requirements.txt  server.py
