[project]
name = "mcp-server"
version = "0.1.0"
description = "Reddit Context Crawler MCP Server - Crawls Reddit for relevant discussions based on chat context"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.21.1",
    "praw>=7.8.1",
    "python-dotenv>=1.2.1",
]
